// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workspaces detection > multiple packages 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --show-config --config-key project
---------- Stdout ------------
[log] {
  "rootWorkspace": {
    "label": "",
    "packageJson": {
      "name": "root",
      "type": "module"
    },
    "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__",
    "dependencies": [],
    "relativePath": ".",
    "configFilePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/nadle.config.ts",
    "id": "root"
  },
  "packageManager": "pnpm",
  "currentWorkspaceId": "root",
  "workspaces": [
    {
      "id": "app",
      "label": "app",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/app",
      "relativePath": "app",
      "dependencies": [],
      "configFilePath": null,
      "packageJson": {
        "name": "app"
      }
    },
    {
      "id": "common:api",
      "label": "common:api",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/common/api",
      "relativePath": "common/api",
      "dependencies": [],
      "configFilePath": null,
      "packageJson": {
        "name": "api"
      }
    },
    {
      "id": "common:types",
      "label": "common:types",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/common/types",
      "relativePath": "common/types",
      "dependencies": [],
      "configFilePath": null,
      "packageJson": {
        "name": "types"
      }
    }
  ]
}
`;

exports[`workspaces detection > multiple packages with config files 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --show-config --config-key project
---------- Stdout ------------
[log] {
  "rootWorkspace": {
    "label": "",
    "packageJson": {
      "name": "root",
      "type": "module"
    },
    "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__",
    "dependencies": [],
    "relativePath": ".",
    "configFilePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/nadle.config.ts",
    "id": "root"
  },
  "packageManager": "pnpm",
  "currentWorkspaceId": "root",
  "workspaces": [
    {
      "id": "app",
      "label": "app",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/app",
      "relativePath": "app",
      "dependencies": [],
      "configFilePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/app/nadle.config.ts",
      "packageJson": {
        "name": "app"
      }
    },
    {
      "id": "common:api",
      "label": "common:api",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/common/api",
      "relativePath": "common/api",
      "dependencies": [],
      "configFilePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/common/api/nadle.config.js",
      "packageJson": {
        "name": "api"
      }
    },
    {
      "id": "common:types",
      "label": "common:types",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/common/types",
      "relativePath": "common/types",
      "dependencies": [],
      "configFilePath": null,
      "packageJson": {
        "name": "types"
      }
    }
  ]
}
`;

exports[`workspaces detection > multiple packages with custom config file 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config config/nadle.config.js --show-config --config-key project
---------- Stdout ------------
[log] {
  "rootWorkspace": {
    "label": "",
    "packageJson": {
      "name": "root",
      "type": "module"
    },
    "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__",
    "dependencies": [],
    "relativePath": ".",
    "configFilePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/config/nadle.config.js",
    "id": "root"
  },
  "packageManager": "pnpm",
  "currentWorkspaceId": "root",
  "workspaces": [
    {
      "id": "app",
      "label": "app",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/app",
      "relativePath": "app",
      "dependencies": [],
      "configFilePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/app/nadle.config.ts",
      "packageJson": {
        "name": "app"
      }
    }
  ]
}
`;

exports[`workspaces detection > multiple packages with ignore packages 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --show-config --config-key project
---------- Stdout ------------
[log] {
  "rootWorkspace": {
    "label": "",
    "packageJson": {
      "name": "root",
      "type": "module"
    },
    "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__",
    "dependencies": [],
    "relativePath": ".",
    "configFilePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/nadle.config.ts",
    "id": "root"
  },
  "packageManager": "pnpm",
  "currentWorkspaceId": "root",
  "workspaces": [
    {
      "id": "app",
      "label": "app",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/app",
      "relativePath": "app",
      "dependencies": [],
      "configFilePath": null,
      "packageJson": {
        "name": "app"
      }
    },
    {
      "id": "common:api",
      "label": "common:api",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/common/api",
      "relativePath": "common/api",
      "dependencies": [],
      "configFilePath": null,
      "packageJson": {
        "name": "api"
      }
    }
  ]
}
`;

exports[`workspaces detection > one package 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --show-config --config-key project
---------- Stdout ------------
[log] {
  "rootWorkspace": {
    "label": "",
    "packageJson": {
      "name": "root",
      "type": "module"
    },
    "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__",
    "dependencies": [],
    "relativePath": ".",
    "configFilePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/nadle.config.ts",
    "id": "root"
  },
  "packageManager": "pnpm",
  "currentWorkspaceId": "root",
  "workspaces": [
    {
      "id": "one",
      "label": "one",
      "absolutePath": "/ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/one",
      "relativePath": "one",
      "dependencies": [],
      "configFilePath": null,
      "packageJson": {
        "name": "one"
      }
    }
  ]
}
`;
